# gobi-player

./: .gitignore  CMakeLists.txt  LICENSE  build.gradle  build_proto.sh  python.proto  python2.proto  readme.md  settings.gradle
python/: build.py  stdlib
python/src/: bootstrap.py  monkeypatches.py  protobuf.py  python_pb2.py  ydl.py  youtube_dl
python/stdlib/: weakref.py
python/test/: download_test_data.py  helper.py  playlist.json  runall.py  test_data.jsons  test_protobuf.py
src/androidTest/java/cheap/hella/gobi/test/: PythonBridgeTest.java  UnitTestSuite.java
src/main/: AndroidManifest.xml
src/main/includes/python/: pyport.h
src/main/java/cheap/hella/gobi/pybridge/: PyBridge.java  PyBridgeProtos.java  TestActivity.java
src/main/java/org/schabi/newpipe/extractor/pybridge/: PyBridge.java  PyBridgeProtos.java  Serialize.java
src/main/jni/: Android.mk  build.py  init.py  monkeypatches.py  pybridge.c  python_monkeypatches.h
src/main/libs/arm64-v8a/: python
src/main/libs/armeabi/: python
src/main/libs/armeabi-v7a/: python
src/main/libs/armeabi-v7a-hard/: python
src/main/libs/mips/: python
src/main/libs/mips64/: python
src/main/libs/x86/: python
src/main/libs/x86_64/: python
src/test/java/org/schabi/newpipe/extractor/services/soundcloud/: SoundcloudChartsExtractorTest.java
